--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -19,6 +19,7 @@ bindsym Print exec --no-startup-id flameshot gui
 
 bindsym $mod+c kill
 bindsym $mod+p exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+w exec --no-startup-id google-chrome-stable
 bindsym $mod+f fullscreen toggle
 bindsym $mod+a focus parent
 
